🌐 Update domain from rwatoken.ir to rwa-assets.ir
- Updated all references to new domain
- Fixed metadata and SEO tags
- Updated package.json homepage
- Updated README.md links
- Updated all component files
- Updated public files (sitemap, robots, schema)
- Ready for rwa-assets.ir deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "پلتفرم تخصصی توکنایز دارایی‌های واقعی (RWA) - طراحی و توسعه توسط MiroTeam",
   "author": "MiroTeam <https://miroteam.ir>",
-  "homepage": "https://rwatoken.ir",
+  "homepage": "https://rwa-assets.ir",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
